<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/secondpage"
        tools:ignore="ContentDescription"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageButton
        android:id="@+id/settingButton"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="11dp"
        android:layout_marginLeft="312dp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="593dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.957"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:onClick="settingButton"
        app:srcCompat="@drawable/sett2"
        tools:ignore="ContentDescription,OnClick,RtlHardcoded" />

    <TextView
        android:id="@+id/currentLevel"
        android:layout_width="222dp"
        android:layout_height="29dp"
        android:text="@string/current_level"
        android:layout_marginTop="63dp"
        android:fontFamily="@font/montserratbold"
        android:textColor="#0BA49A"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteX="174dp"
        tools:layout_editor_absoluteY="118dp"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/AspiringMonk"
        android:layout_width="167dp"
        android:layout_height="47dp"
        app:layout_constraintTop_toBottomOf="@id/currentLevel"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="92dp"
        android:layout_marginRight="101dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/distracted_baby"
        android:textColor="#FFFFFF"
        android:background="#0CBFB4"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:onClick="currentLevelButton"
        android:layout_marginStart="92dp"
        android:layout_marginEnd="101dp" />

    <ImageButton
        android:id="@+id/startButton"
        android:layout_width="190dp"
        android:layout_height="167dp"
        app:layout_constraintTop_toBottomOf="@id/AspiringMonk"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="73dp"
        app:srcCompat="@drawable/image1"
        android:onClick="startButton"
        tools:ignore="ContentDescription,OnClick" />


    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/digital7"
        android:text="@string/_00_00"
        android:gravity="center"
        android:textColor="#085B56"
        android:textSize="110sp"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/AspiringMonk"
        />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginTop="12dp"
        android:background="#0CBFB4"
        android:fontFamily="@font/lilitaone"
        android:onClick="cancelButton"
        android:text="@string/stop"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintHorizontal_bias="0.277"
        app:layout_constraintLeft_toRightOf="@id/stopButton"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/timer" />

    <Button
        android:id="@+id/stopButton"
        android:layout_width="130dp"
        android:layout_height="44dp"
        app:layout_constraintTop_toBottomOf="@id/timer"
        android:layout_marginTop="12dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/pause"
        android:textColor="#FFFFFF"
        android:fontFamily="@font/lilitaone"
        android:background="#0CBFB4"
        android:onClick="stopButton"
        app:layout_constraintHorizontal_bias="0.0"
        android:textSize="36sp"
        android:visibility="invisible"
        android:layout_marginStart="92dp"
        android:layout_marginEnd="101dp"
        android:layout_marginLeft="92dp"
        android:layout_marginRight="101dp" />

    <TextView
        android:id="@+id/levelUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginRight="253dp"
        android:fontFamily="@font/montserratbold"
        android:text="@string/level_up_in"
        android:textColor="#085B56"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="0.253"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startButton"
        android:layout_marginEnd="253dp" />


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="130dp"
        android:layout_height="31dp"
        android:layout_marginRight="230dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="145dp"
        android:scaleY="8"
        app:layout_constraintBottom_toBottomOf="parent"
        android:progress="50"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/levelUp"
        app:layout_constraintVertical_bias="0.0"
        android:theme="@style/ProgressBarColour"
        android:layout_marginEnd="230dp" />

    <ImageView
        android:id="@+id/clock"
        android:layout_width="27.5dp"
        android:layout_height="27.5dp"
        android:layout_marginLeft="2.75dp"
        android:layout_marginRight="199.75dp"
        android:layout_marginBottom="146.75dp"
        app:layout_constraintBottom_toBottomOf="@id/progressBar"
        app:layout_constraintTop_toTopOf="@id/progressBar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@id/progressBar"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/levelUp"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/watch"
        tools:ignore="ContentDescription"
        android:layout_marginStart="2.75dp"
        android:layout_marginEnd="199.75dp" />

<!--    <TextView-->
<!--        android:id="@+id/test"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/testing"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/imageView3"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/imageView3"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/progressBar" />-->

    <TextView
        android:id="@+id/progressTimeLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_40"
        android:textSize="24sp"
        android:paddingRight="5dp"
        android:fontFamily="@font/montserratbold"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@id/progressBar"
        android:layout_marginLeft="20dp"
        app:layout_constraintStart_toStartOf="@id/progressBar"
        app:layout_constraintTop_toTopOf="@id/progressBar"
        android:layout_marginStart="20dp"
        android:paddingEnd="5dp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/progressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min_left"
        android:textSize="14sp"

        android:fontFamily="@font/montserratbold"
        android:textColor="#FFFFFF"
        app:layout_constraintLeft_toRightOf="@id/progressTimeLeft"
        app:layout_constraintTop_toTopOf="@id/progressTimeLeft"
        app:layout_constraintBottom_toBottomOf="@id/progressTimeLeft"
        />


</androidx.constraintlayout.widget.ConstraintLayout>