<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        android:background="@drawable/bg_linear_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:text="@string/success"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="50dp"
            android:gravity="center_horizontal"
            android:text="@string/congratulations_on_level_up"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/bg_iv"
        android:src="@drawable/ic_check"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@id/ll"
        app:layout_constraintTop_toTopOf="@id/ll"
        app:layout_constraintStart_toStartOf="@id/ll"
        app:layout_constraintEnd_toEndOf="@id/ll"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/confirm"
        android:background="@color/colorGreen"
        android:textColor="@color/colorWhite"
        android:textAllCaps="false"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/ll"
        app:layout_constraintEnd_toEndOf="@id/ll"
        app:layout_constraintTop_toBottomOf="@id/ll"
        app:layout_constraintBottom_toBottomOf="@id/ll"/>



</androidx.constraintlayout.widget.ConstraintLayout>